--- a/style/style.css
+++ b/style/style.css
@@ -140,7 +140,8 @@ margin-top: 32px;
 }
     
 .pillar{
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0px rgba(14, 14, 14, 0.15);
+    /* border: 1px solid rgba(14, 14, 14, 0.15); */
     padding: 30px;
 }
 /* future style */
@@ -162,6 +163,7 @@ margin-top: 32px;
     margin-right: 130px;
   
     padding: 32px;
+    
     box-sizing: border-box;
     border-radius: 16px;
     
@@ -243,17 +245,18 @@ background: rgb(84, 144, 245);
     background-image: url(../assets/quote-bg.png);
     background-repeat: no-repeat;
     background-position: left, top 15px ;
-    padding-top: 0px;
+    padding-top: 5px;
     padding-bottom: 15px;
+    padding-right: 5px;
     box-sizing: border-box;
 border: 1px solid rgba(14, 14, 14, 0.15);
 border-radius: 16px;
 
 
 }
-.bd{
+/* .bd{
 padding: 20px;
-}
+} */
 .bd-title{
     padding: 20px; 
 }
